# InteractionScrapy

./: .gitignore  README.md  pyproject.toml  requirements.txt
scraping/: models.py  scrapy.py  spreadsheet.py
