[tool.poetry]
name = "interactionscrapy"
version = "0.1.0"
description = ""
authors = ["Denys"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
